# MLOPS_105

./: .dockerignore  .gitignore  AGENTS.md  CLI.md  DRIFT_WORKFLOW.md  M27_DRIFT_GUIDE.md  M27_TASKS.md  README.md  README_MLOPS_TASKS.md  REPORT_CHECKLIST.md  bentofile.yaml  cloudbuild.yaml  data.dvc  main.py  outputs.dvc  pyproject.toml  report.html  tasks.py  vertex_ai_train.yaml
.dvc/: GUIDE.md  config
.github/workflows/: cml_data.yaml  stage_model.yaml  tests.yaml
MLOPS_105/: LICENSE  README.md  pyproject.toml  tasks.py
MLOPS_105/tests/: test_data.py
configs/: inference.yaml  main.yaml  otel-config.yaml  service.yaml  train.yaml
configs/data/: pneumonia.yaml
configs/experiment/: baseline.yaml
configs/model/: efficientnet_b0.yaml
configs/optimizer/: adam.yaml
dockerfiles/: api.dockerfile  backend.dockerfile  drift_monitor.dockerfile  train.dockerfile
frontend/: README.md  app.js  index.html  styles.css
frontend_django/: README.md  cli_frontend.py  manage.py
frontend_django/dtu_frontend/: __init__.py  asgi.py  cli_frontend.py  settings.py  urls.py  wsgi.py
frontend_django/ui/: __init__.py  apps.py  urls.py  views.py
load_tests/: README.md  locustfile.py
project_tasks/: MLOPS_TASKS.md
reports/: README.md  README_2.md  README_dev.md  loadtest_failures.csv  loadtest_stats.csv  loadtest_stats_history.csv
reports/drift/: drift_report.html  drift_report.json  drift_test_summary.json
reports/drift_monitor/: monitoring_drift_report.html  monitoring_drift_report.json
tests/api/: test_api.py
vertex_ai/: config_cpu.yaml
wandb/: latest-run
(+58 files in other folders)
