[project]
name = "mlops-105"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "typer>=0.21.1",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "invoke>=2.2.1",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]
